<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bobmchenry.ad340.week2assignment.StatsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numRollsString"
        android:id="@+id/numRollsText"
        android:layout_marginTop="4dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/critSuccessString"
        android:id="@+id/critSuccessText"

        android:layout_marginTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/critFailString"
        android:id="@+id/critFailText"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/avgRollString"
        android:id="@+id/avgRollText"
        android:layout_marginTop="4dp"
        />

    <GridLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#555"
        android:columnCount="5"
        android:gravity="center"
        >

        <TextView android:id="@+id/one"
            android:layout_width="76dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text=" 1: "
            android:background="#ccc"
            />
        <TextView android:id="@+id/two"
            android:layout_width="76dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text=" 2:"
            android:background="#ccc"             />
        <TextView android:id="@+id/three"
            android:layout_width="76dp"
            android:layout_column="2"
            android:layout_row="0"
            android:text=" 3:"
            android:background="#ccc"             />
        <TextView android:id="@+id/four"
            android:layout_width="76dp"
            android:layout_column="3"
            android:layout_row="0"
            android:text=" 4:"
            android:background="#ccc"             />
        <TextView android:id="@+id/five"
            android:layout_width="76dp"
            android:layout_column="4"
            android:layout_row="0"
            android:text=" 5:"
            android:background="#ccc"             />
        <TextView android:id="@+id/six"
            android:layout_width="76dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text=" 6:"
            android:background="#ccc"             />
        <TextView android:id="@+id/seven"
            android:layout_width="76dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text=" 7:"
            android:background="#ccc"             />
        <TextView android:id="@+id/eight"
            android:layout_width="76dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text=" 8:"
            android:background="#ccc"             />
        <TextView android:id="@+id/nine"
            android:layout_width="76dp"
            android:layout_column="3"
            android:layout_row="1"
            android:text=" 9:"
            android:background="#ccc"             />
        <TextView android:id="@+id/ten"
            android:layout_width="76dp"
            android:layout_column="4"
            android:layout_row="1"
            android:text="10:"
            android:background="#ccc"             />
        <TextView android:id="@+id/eleven"
            android:layout_width="76dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="11:"
            android:background="#ccc"             />
        <TextView android:id="@+id/twelve"
            android:layout_width="76dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="12:"
            android:background="#ccc"             />
        <TextView android:id="@+id/thirteen"
            android:layout_width="76dp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="13:"
            android:background="#ccc"             />
        <TextView android:id="@+id/fourteen"
            android:layout_width="76dp"
            android:layout_column="3"
            android:layout_row="2"
            android:text="14:"
            android:background="#ccc"             />
        <TextView android:id="@+id/fifteen"
            android:layout_width="76dp"
            android:layout_column="4"
            android:layout_row="2"
            android:text="15:"
            android:background="#ccc"             />
        <TextView android:id="@+id/sixteen"
            android:layout_width="76dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="16:"
            android:background="#ccc"             />
        <TextView android:id="@+id/seventeen"
            android:layout_width="76dp"
            android:layout_column="1"
            android:layout_row="3"
            android:text="17:"
            android:background="#ccc"             />
        <TextView android:id="@+id/eighteen"
            android:layout_width="76dp"
            android:layout_column="2"
            android:layout_row="3"
            android:text="18: "
            android:background="#ccc"             />
        <TextView android:id="@+id/nineteen"
            android:layout_width="76dp"
            android:layout_column="3"
            android:layout_row="3"
            android:text="19:"
            android:background="#ccc"             />
        <TextView android:id="@+id/twenty"
            android:layout_width="76dp"
            android:layout_column="4"
            android:layout_row="3"
            android:text="20:"
            android:background="#ccc"             />

    </GridLayout>

    <Button
        android:id="@+id/reset"
        android:text="@string/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="resetPrefs"/>
</LinearLayout>
